# pymongo-migrate

./: .bandit.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: test.yml
src/pymongo_migrate/: cli.py  generate.py  graph_draw.py  loader.py  main.py  migrations.py  mongo_migrate.py  state.py
tests/: conftest.py  test_cli.py  test_generate.py  test_main.py  test_main_status.py  test_mongo_migrate.py  test_mongo_migrate_generate.py  utils.py
tests/migrations/: 20150612230153.py  20181123000000_gt_500.py
